Fix font spacing

--- a/usr/startpage/style.css
+++ b/usr/startpage/style.css
@@ -8,7 +8,7 @@ html {
 	align-items: center;
 	justify-content: center;
 	height: 100%;
-	font-family: "terminus (ttf)", sans-serif;
+	font-family: "font", sans-serif;
 	font-weight: normal;
 	font-size: 12px;
 }
